@@ -56,10 +56,9 @@ public:
   virtual ~DumpPrinceton () ;
 
   /// Method which is called at the beginning of the calibration cycle
-  virtual void beginCalibCycle(Env& env);
+  virtual void beginCalibCycle(Event& evt, Env& env);
   
-  /// Method which is called with event data, this is the only required 
-  /// method, all other methods are optional
+  /// Method which is called with event data
   virtual void event(Event& evt, Env& env);
   
 protected:
