@@ -55,9 +55,9 @@ DumpAcqTdc::~DumpAcqTdc ()
 {
 }
 
-/// Method which is called at the beginning of the calibration cycle
+// Method which is called at the beginning of the calibration cycle
 void 
-DumpAcqTdc::beginCalibCycle(Env& env)
+DumpAcqTdc::beginCalibCycle(Event& evt, Env& env)
 {
   MsgLog(name(), trace, "in beginCalibCycle()");
 
@@ -88,8 +88,7 @@ DumpAcqTdc::beginCalibCycle(Env& env)
   }
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpAcqTdc::event(Event& evt, Env& env)
 {
