@@ -55,9 +55,9 @@ DumpAcqiris::~DumpAcqiris ()
 {
 }
 
-/// Method which is called at the beginning of the calibration cycle
+// Method which is called at the beginning of the calibration cycle
 void 
-DumpAcqiris::beginCalibCycle(Env& env)
+DumpAcqiris::beginCalibCycle(Event& evt, Env& env)
 {
   MsgLog(name(), trace, "in beginCalibCycle()");
 
@@ -89,8 +89,7 @@ DumpAcqiris::beginCalibCycle(Env& env)
   }
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpAcqiris::event(Event& evt, Env& env)
 {
