@@ -57,8 +57,7 @@ DumpBld::~DumpBld ()
 {
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpBld::event(Event& evt, Env& env)
 {
