@@ -54,9 +54,9 @@ DumpEvr::~DumpEvr ()
 {
 }
 
-/// Method which is called at the beginning of the calibration cycle
+// Method which is called at the beginning of the calibration cycle
 void 
-DumpEvr::beginCalibCycle(Env& env)
+DumpEvr::beginCalibCycle(Event& evt, Env& env)
 {
   MsgLog(name(), trace, "in beginCalibCycle()");
 
@@ -271,8 +271,7 @@ DumpEvr::beginCalibCycle(Env& env)
   
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpEvr::event(Event& evt, Env& env)
 {
