@@ -54,9 +54,9 @@ DumpPnccd::~DumpPnccd ()
 {
 }
 
-/// Method which is called at the beginning of the calibration cycle
+// Method which is called at the beginning of the calibration cycle
 void 
-DumpPnccd::beginCalibCycle(Env& env)
+DumpPnccd::beginCalibCycle(Event& evt, Env& env)
 {
   MsgLog(name(), trace, "in beginCalibCycle()");
 
@@ -92,8 +92,7 @@ DumpPnccd::beginCalibCycle(Env& env)
 
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpPnccd::event(Event& evt, Env& env)
 {
