@@ -54,9 +54,9 @@ DumpPulnix::~DumpPulnix ()
 {
 }
 
-/// Method which is called at the beginning of the calibration cycle
+// Method which is called at the beginning of the calibration cycle
 void 
-DumpPulnix::beginCalibCycle(Env& env)
+DumpPulnix::beginCalibCycle(Event& evt, Env& env)
 {
   MsgLog(name(), trace, "in beginCalibCycle()");
 
@@ -99,8 +99,7 @@ DumpPulnix::beginCalibCycle(Env& env)
   }
 }
 
-/// Method which is called with event data, this is the only required 
-/// method, all other methods are optional
+// Method which is called with event data
 void 
 DumpPulnix::event(Event& evt, Env& env)
 {
